@@ -11,10 +11,10 @@
        - Tag CVS repository with the version number
       ======================================================================= -->
 
-<project name="openjump" default="dist-zip" basedir="..">
+<project name="openjump 1.5 branch" default="dist-zip" basedir="..">
     <property name="name" value="openjump"/>
     <property name="Name" value="OpenJUMP"/>
-    <property name="version" value="1.5.1rc"/>
+    <property name="version" value="1.5.2"/>
     <!-- The recommended setting for debug is "on", so that line numbers are included in stack traces. [Jon Aquino 2005-04-06] -->
     <property name="debug" value="on"/>
     <property name="deprecation" value="off"/>
